tests/suite/snapshots/suite__check__tests__check__bad_final_7.xi.snap
---
source: tests/suite/check.rs
assertion_line: 34
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_final_7.xi:3:17]
   │
 3 │ class B extends A::<> {}
   ·                 ──┬──  
   ·                   ╰──── Class At0 is declared final and cannot be extended
   │
   ├─[tests/check/bad_final_7_1.ixi:1:22]
   │
 1 │ template final class A {}
   ·                      ┬  
   ·                      ╰── Class defined here
───╯

